Fix spacing of empty list in applicant pages

--- a/src/pages/Applicant/Home/Feed/styles.module.scss
+++ b/src/pages/Applicant/Home/Feed/styles.module.scss
@@ -14,6 +14,10 @@
   overflow-y: auto;
 }
 
+.emptyList {
+  min-height: calc(100vh - #{5 * $spacing-xxl});
+}
+
 @media (max-width: $laptopWidth) {
   .container {
     display: block;
@@ -25,5 +29,10 @@
 
   .offers {
     padding: $spacing-s 4% $spacing-xxl 4%;
+  }
+
+  .emptyList {
+    margin-top: $spacing-xxl;
+    min-height: unset;
   }
 }
